<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MailboxPlus</string>
    <string name="description_logo">Demo</string>
        <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
        <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
     
    
    <string name="national_stamps">National stamps:</string>
    <string name="international_stamps">International stamps:</string>
    
    <string-array name="stops_array">
    	<item>62 | Alesia/Didot -> M Alesia</item>
    	<item>379 | La croix Berny -> Carrefour</item>
        <item>379 | Carrefour -> La croix Berny</item>
        <item>395 | Carrefour -> Antony</item>
        <item>395 | Antony -> Carrefour*</item>
    </string-array>
    <string name="title_login">Log in</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_send">Send</string>
    <string name="title_received_stamps">Received stamps</string>
    <string name="title_send_letter">Buy stamp</string>
    <string name="title_community">Community</string>
</resources>
